[package]
name = "Grapple-Arena"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "*"
bevy_asset_loader = "*"
bevy_ecs_ldtk = "*"
#bevy_rapier2d = "*"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] } #for debug-render

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.release]
codegen-units = 1
